# wieringa-roofing

./: .gitignore  README.md  gentiling2.py  notes.txt  penrose_p3_deflations.xcf  pyproject.toml  roofing_angles.xcf  roofing_pentagon.xcf  wieringa.scad
src/wieringa_roofing/: __init__.py  gentiling.py
