[project]
name = "wieringa-roofing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cadquery>=2.6.0",
    "cffi==1.17.0rc1",
    "pycairo>=1.28.0",
    "z3-solver>=4.15.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
